<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalScrollbarPosition="right"
    tools:context=".ModificarFragment">

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="654dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521">

        <ScrollView
            android:layout_width="357dp"
            android:layout_height="105dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#BDBDBD"
                android:gravity="center"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_Id"
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_Id"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/et_Id"
                        android:layout_width="285dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/et_Id" />

                </TableRow>

                <Button
                    android:id="@+id/btn_Buscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#EEEEEE"
                    android:text="@string/btn_Buscar"
                    android:textColor="#000000"
                    android:verticalScrollbarPosition="right" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_NombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_NombreProducto" />

        <EditText
            android:id="@+id/et_NombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/et_NombreProducto" />

        <TextView
            android:id="@+id/tv_Stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_Stock" />

        <EditText
            android:id="@+id/et_Stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/et_Stock" />

        <TextView
            android:id="@+id/tv_Categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_Categoria" />

        <Spinner
            android:id="@+id/sp_Categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_Agregar"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#EEEEEE"
            android:text="@string/btn_Modificar"
            android:textColor="#000000" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>