<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".AgregarFragment">
        <ScrollView
            android:id="@+id/scrollViewAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/relativeLayoutAgregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">
            <TextView
                android:id="@+id/tvIdProdAgregar"
                android:layout_width="60dp"
                android:layout_height="19dp"
                android:text="@string/tv_Id" />
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/etIdProdAgregar"
                    android:hint="@string/et_Id"
                    android:layout_below="@+id/tvIdProdAgregar" />
            <TextView
                android:id="@+id/tvNombreProductoAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_NombreProducto"
                android:layout_below="@+id/etIdProdAgregar" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombreProductoAgregar"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:hint="@string/et_NombreProducto"
                    android:layout_below="@+id/tvNombreProductoAgregar" />
            <TextView
                android:id="@+id/tvStockAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_Stock"
                android:layout_below="@+id/etNombreProductoAgregar" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStockAgregar"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_below="@+id/tvStockAgregar"
                    android:hint="@string/et_Stock"
                    android:numeric="integer" />
            <TextView
                android:id="@+id/etCategoriaAgregar"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/tv_Categoria"
                android:layout_below="@+id/etStockAgregar" />
                <Spinner
                    android:id="@+id/spCategoriaAgregar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/etCategoriaAgregar" />

                <Button
                    android:id="@+id/btnAgregarProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spCategoriaAgregar"
                    android:onClick="btnAgregarProducto"
                    android:text="@string/agregar" />
            </RelativeLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>